--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="jh_btn_get_verify_code">获取验证码</string>
     <string name="jh_btn_close">返回游戏</string>
     <string name="jh_btn_submit">确定</string>
+    <string name="jh_msg_change_pwd_success">密码修改成功</string>
+    <string name="jh_msg_dialog_title">温馨提示</string>
+    <string name="jh_msg_three_login">第三方登录</string>
 </resources>
