--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="jh_hint_confirm_pwd">请确认密码</string>
     <string name="jh_btn_get_verify_code">获取验证码</string>
     <string name="jh_btn_close">返回游戏</string>
+    <string name="jh_btn_register">一键注册</string>
+    <string name="jh_btn_forget_pwd">忘记密码</string>
     <string name="jh_btn_submit">确定</string>
     <string name="jh_msg_change_pwd_success">密码修改成功</string>
     <string name="jh_msg_dialog_title">温馨提示</string>
